syntax = "proto3";
package sec03;

option java_package = "com.grpc_playground.grcp_playgroud.model.sec03";
option java_multiple_files = true;

message Car2 {
  string make = 1;
  string model = 2;
  int32 year = 3;
}

message Cars {
  repeated Car2 cars =1;
}

message ComplexDealer {
  map<int32, Cars> inventory = 1;
}